--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "koa": "^2.14.1"
+    "koa": "^2.14.1",
+    "koa-router": "^12.0.0"
   }
 }
