--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
+    "koa-session-minimal": "^4.0.3",
     "koa-static": "^5.0.0",
     "koa-views": "^8.0.0"
   }
