--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/multer": "^3.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -22,6 +24,8 @@
     "koa-router": "^12.0.0",
     "koa-session-minimal": "^4.0.3",
     "koa-static": "^5.0.0",
-    "koa-views": "^8.0.0"
+    "koa-views": "^8.0.0",
+    "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
