--- a/koa-mongoDB/package.json
+++ b/koa-mongoDB/package.json
@@ -26,6 +26,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^8.0.0",
     "mongoose": "^6.9.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ws": "^8.12.0"
   }
 }
