--- a/koa-mysql/package.json
+++ b/koa-mysql/package.json
@@ -27,6 +27,7 @@
     "koa-views": "^8.0.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.1.1"
+    "mysql2": "^3.1.1",
+    "socket.io": "^4.6.0"
   }
 }
